# zip-brute

./: .gitignore  Cargo.toml  LICENSE  README.md  logging.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: dictionary_processor_bench.rs  password_gen_processor_bench.rs  password_iterator_bench.rs
docs/: app-run-instructions.md  build-instructions.md
src/: lib.rs  main.rs
src/core/: args.rs  args_test.rs  mod.rs  password_iterator.rs  password_iterator_test.rs  utils.rs  utils_test.rs
src/core/processors/: dictionary_processor.rs  mod.rs  password_gen_processor.rs  processor.rs
src/models/: charset.rs  mod.rs  strategy.rs  zip_data.rs
